# fleet-server

./: CLAUDE.md  Cargo.toml  MISSION.md  PROGRESS.md  README.md  ROADMAP.md
.claude/: settings.json
.claude/bus/: seq.json  stream.jsonl
.claude/workers/: registry.json
.claude/workers/bms-chief/: mission.md
.github/workflows/: ci.yml
proptest-regressions/storage/: sqlite.txt
scripts/: bms-mail  disk-monitor.sh  mail-hook.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: accounts.rs  analytics.rs  auth.rs  blobs.rs  diagnostics.rs  error.rs  labels.rs  lists.rs  messages.rs  mod.rs  models.rs  rate_limit.rs  search.rs  threads.rs  webhooks.rs  ws.rs
src/background/: deadlines.rs  mod.rs
src/db/: connection.rs  schema.rs
src/delivery/: tmux.rs
src/mcp/: main.rs  protocol.rs  tools.rs
src/search/: filter.rs  mod.rs  parser.rs
src/service/: accounts.rs  labels.rs  lists.rs  messages.rs  mod.rs  provision.rs  requests.rs  threads.rs
src/storage/: blob.rs  fts.rs  mod.rs  models.rs  sqlite.rs
src/tui/: api.rs  app.rs  main.rs  ui.rs
tests/: bench.rs  cli.rs  integration.rs  mcp.rs
