[package]
name = "boring-mail"
version = "0.1.0"
edition = "2024"
description = "A Gmail-conformant mail server for AI agents"
default-run = "boring-mail"

[[bin]]
name = "boring-mail"
path = "src/main.rs"

[[bin]]
name = "boring-mail-mcp"
path = "src/mcp/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.10"
zstd = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "timeout", "request-id", "propagate-header"] }
tower = "0.5"
base64 = "0.22"
dashmap = "6"
urlencoding = "2"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
